<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"> <!-- Füllt den Viewport aus -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingHorizontal="26dp"
        android:clipToPadding="false"
        android:background="@color/background_light">

        <!-- Logo -->
        <ImageView
            android:layout_width="500px"
            android:layout_height="400px"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_app_green"
            android:contentDescription="Logo" />

        <!-- Search Bar -->
        <include
            android:id="@+id/search_bar"
            layout="@layout/searchbar" />

        <!-- "Mein Kühlschrank" Card -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/card_background"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:elevation="20dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/mein_vorrat_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mein_vorrat"
                android:textColor="@color/text_foreground_light"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/leerer_vorrat_placeholder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/green_dark"
                android:gravity="center"
                android:text="Dein Vorrat ist leer"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/stock_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/mein_vorrat_text"
                android:layout_marginTop="8dp"
                android:scrollbars="vertical"
                android:nestedScrollingEnabled="true"/>


            <TextView
                android:id="@+id/empty_fridge_text"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leerer_vorrat"
                android:textColor="@color/text_background"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="👀"
                android:visibility="gone"
                android:textSize="38sp"
                android:layout_centerHorizontal="true"
                android:layout_above="@id/empty_fridge_text"
                android:layout_marginBottom="8dp" />

            <Button
                android:id="@+id/lebensmittelAddButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/btn_lightgreen"
                android:layout_marginBottom="10dp"
                android:text="@string/lebensmittel_hinzufügen"
                android:textAllCaps="false"
                android:textColor="@color/pure_white"
                android:fontFamily="sans-serif" />
        </RelativeLayout>


        <!-- "Haltbarkeit" and "Meine Routinen" Cards -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:elevation="10dp"
                android:layout_height="250dp"
                android:background="@drawable/card_background"
                android:padding="10dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/meine_haltbarkeit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/haltbarkeit"
                    android:textColor="@color/text_foreground_light"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/leere_haltbarkeit_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="Keine Haltbarkeit gefunden"
                    android:textColor="@color/green_dark"
                    android:textSize="11sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/expiry_date_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_below="@id/meine_haltbarkeit_text"
                    android:layout_marginTop="8dp"
                    android:scrollbars="vertical"
                    android:nestedScrollingEnabled="true"/>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:elevation="10dp"
                android:layout_weight="1"
                android:layout_height="250dp"
                android:background="@drawable/card_background"
                android:padding="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/meine_routinen_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meine_routinen"
                    android:textColor="@color/text_foreground_light"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/leere_routine_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="Keine Routinen gefunden"
                    android:textColor="@color/green_dark"
                    android:textSize="11sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/routine_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_below="@id/meine_routinen_text"
                    android:layout_marginTop="8dp"
                    android:scrollbars="vertical"
                    android:nestedScrollingEnabled="true"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>